syntax = "proto3";

package device;

service DeviceService {
  // Device operations
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
  rpc GetManyDevices(GetManyDevicesRequest) returns (GetManyDevicesResponse); // User
  rpc GetManyDevicesAdmin(GetManyDevicesRequest) returns (GetManyDevicesAdminResponse); // Admin
  rpc CreateDevice(CreateDeviceRequest) returns (GetDeviceResponse);
  rpc UpdateDevice(UpdateDeviceRequest) returns (GetDeviceResponse);
  rpc DeleteDevice(DeleteDeviceRequest) returns (DeleteDeviceResponse);
  
  // Combo operations (Admin)
  rpc GetCombo(GetComboRequest) returns (GetComboResponse);
  rpc GetManyCombos(GetManyCombosRequest) returns (GetManyCombosResponse);
  rpc CreateCombo(CreateComboRequest) returns (GetComboResponse);
  rpc UpdateCombo(UpdateComboRequest) returns (GetComboResponse);
  rpc DeleteCombo(DeleteComboRequest) returns (DeleteComboResponse);
}

// GetDevice
message GetDeviceRequest {
  string deviceId = 1;
}

message GetDeviceResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
  string categoryName = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

// GetManyDevices (User)
message GetManyDevicesRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string search = 4;
  string categoryId = 5;
}

message GetManyDevices {
  string name = 1;
  double price = 2;
  string description = 3;
  string status = 4;
  int32 quantity = 5;
  repeated string information = 6;
  repeated string images = 7;
  string categoryName = 8;
}

message GetManyDevicesResponse {
  repeated GetManyDevices devices = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 totalItems = 4;
  int32 totalPages = 5;
}

// GetManyDevicesAdmin (Admin)
message GetManyDevicesAdmin {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
  string categoryName = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

message GetManyDevicesAdminResponse {
  repeated GetManyDevicesAdmin devices = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 totalItems = 4;
  int32 totalPages = 5;
}

// CreateDevice
message CreateDeviceRequest { 
  string name = 1;
  double price = 2;
  string description = 3;
  string status = 4;
  int32 quantity = 5;
  repeated string information = 6;
  repeated string images = 7;
  string categoryId = 8;
}

// UpdateDevice
message UpdateDeviceRequest {
  string deviceId = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
}

// DeleteDevice
message DeleteDeviceRequest {
  string deviceId = 1;
}

message DeleteDeviceResponse {
  string message = 1;
}

// ============================================
// COMBO MESSAGES
// ============================================

// GetCombo
message GetComboRequest {
  string comboId = 1;
}

message ComboDeviceItem {
  string deviceId = 1;
  string deviceName = 2;
  double devicePrice = 3;
  int32 quantity = 4;
}

message GetComboResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  repeated string images = 5;
  repeated ComboDeviceItem devices = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

// GetManyCombos
message GetManyCombosRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message GetManyCombos {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  repeated string images = 5;
  int32 deviceCount = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message GetManyCombosResponse {
  repeated GetManyCombos combos = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 totalItems = 4;
  int32 totalPages = 5;
}

// CreateCombo
message ComboDeviceInput {
  string deviceId = 1;
  int32 quantity = 2;
}

message CreateComboRequest {
  string name = 1;
  double price = 2;
  string description = 3;
  repeated string images = 4;
  repeated ComboDeviceInput deviceItems = 5;
}

// UpdateCombo
message UpdateComboRequest {
  string comboId = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  repeated string images = 5;
  repeated ComboDeviceInput deviceItems = 6;
}

// DeleteCombo
message DeleteComboRequest {
  string comboId = 1;
}

message DeleteComboResponse {
  string message = 1;
}
